# CenterPose_neor

./: pyproject.toml
src/lib/models/networks/: pose_dla_dcn.py  resnet_dcn.py
src/lib/utils/: tracker.py  tracker_baseline.py
