[project]
name = "centerpose"

version = "0.1.3"

readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "progress",
    "matplotlib",
    "scipy",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "albumentations",
    "pyrr",
    "simplejson",
    "tqdm",
    "opencv-python>=4.5.3.56",
    "numpy",
    "scikit-learn",
    "filterpy>=1.4.5",
    "setuptools>=49.6.0",
    "frozendict",
    "tensorflow",
    "requests",
    "httpx",
    "eigenpy",
    "opencv-python",
    "simplejson",
    "dcnv2",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
dcnv2 = { git = "https://github.com/neor164/DCNv2_latest.git" }
